--- a/BYT_SOFTWARE/index.html
+++ b/BYT_SOFTWARE/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BYT SOFTWARE - Bosque y Tierra</title>
-    <link rel="stylesheet" href="src/styles/global.css">
+    <link rel="stylesheet" href="./src/styles/global.css">
 </head>
 <body>
     <div class="loading-screen" id="loadingScreen">
         <div class="loading-content">
-            <img src="src/assets/logo_byt.png" alt="Logo BYT" class="loading-logo">
+            <div style="width: 120px; height: 120px; background: linear-gradient(135deg, #2e5e4e, #4CAF50); border-radius: 20px; display: flex; align-items: center; justify-content: center; margin: 0 auto 20px; color: white; font-size: 48px; font-weight: bold;">BYT</div>
             <h2>BYT SOFTWARE</h2>
             <p>Sistema de Gestión - Bosque y Tierra</p>
             <div class="loading-spinner"></div>
@@ -19,7 +19,7 @@
     <script>
         // Redirigir al login después de la pantalla de carga
         setTimeout(() => {
-            window.location.href = 'src/pages/login/login.html';
+            window.location.href = './src/pages/login/login.html';
         }, 2000);
     </script>
 </body>
