--- a/BYT_SOFTWARE/index.html
+++ b/BYT_SOFTWARE/index.html
@@ -5,11 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BYT SOFTWARE - Bosque y Tierra</title>
     <link rel="stylesheet" href="./src/styles/global.css">
+    <script>
+      // Supabase runtime config para pruebas: reemplaza la ANON KEY por la real
+      // URL del proyecto: https://qwbeectinjasekkjzxls.supabase.co
+      window.__SUPABASE_URL = 'https://qwbeectinjasekkjzxls.supabase.co';
+      window.__SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InF3YmVlY3Rpbmphc2Vra2p6eGxzIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjI0NjM5NjAsImV4cCI6MjA3ODAzOTk2MH0.oqGQKlsJLMe3gpiVqutblOhlT4gn2ZOCWKKpO7Slo4U';
+    </script>
 </head>
 <body>
     <div class="loading-screen" id="loadingScreen">
         <div class="loading-content">
-            <div style="width: 120px; height: 120px; background: linear-gradient(135deg, #2e5e4e, #4CAF50); border-radius: 20px; display: flex; align-items: center; justify-content: center; margin: 0 auto 20px; color: white; font-size: 48px; font-weight: bold;">BYT</div>
+            <div style="width: 120px; height: 120px; background: linear-gradient(135deg, #2e5e4e, #4CAF50); border-radius: 20px; display: flex; align-items: center; justify-content: center; margin: 0 auto;">
+                <!-- logo placeholder -->
+            </div>
             <h2>BYT SOFTWARE</h2>
             <p>Sistema de Gestión - Bosque y Tierra</p>
             <div class="loading-spinner"></div>
