--- a/BYT_SOFTWARE/src/pages/login/login.html
+++ b/BYT_SOFTWARE/src/pages/login/login.html
@@ -1,31 +1,55 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Login - BYT SOFTWARE</title>
+  <link rel="stylesheet" href="../../styles/global.css">
+
+  <!--
+    CONFIG RUNTIME TEMPORAL (solo para pruebas directas).
+    Reemplazá TU_ANON_KEY_AQUI por la ANON key de Supabase para probar.
+    En producción NO dejar esta key en el HTML; después moveremos a Secrets/Build.
+  -->
+  <script>
+    // Si ya pusiste window.__SUPABASE_* en index.html, puede no propagarse al abrir login.html directo,
+    // por eso definimos aquí temporalmente para pruebas.
+    window.__SUPABASE_URL = window.__SUPABASE_URL || 'https://qwbeectinjasekkjzxls.supabase.co';
+    window.__SUPABASE_ANON_KEY = window.__SUPABASE_ANON_KEY || 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InF3YmVlY3Rpbmphc2Vra2p6eGxzIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjI0NjM5NjAsImV4cCI6MjA3ODAzOTk2MH0.oqGQKlsJLMe3gpiVqutblOhlT4gn2ZOCWKKpO7Slo4U';
+  </script>
 </head>
 <body>
-  <main>
-    <h1>Iniciar sesión</h1>
-    <form id="login-form">
-      <label>
-        Email
-        <input type="email" id="email" required />
-      </label>
-      <br/>
-      <label>
-        Password
-        <input type="password" id="password" required />
-      </label>
-      <br/>
-      <button type="submit">Entrar</button>
-    </form>
+  <div class="login-container">
+    <div class="login-card">
+      <img src="../../assets/logo_byt.png" alt="Logo BYT" class="login-logo">
+      <h1 class="login-title">BYT SOFTWARE</h1>
+      <p class="login-subtitle">Sistema de Gestión - Bosque y Tierra</p>
 
-    <div id="msg" role="status" aria-live="polite"></div>
-  </main>
+      <form id="loginForm">
+        <div class="form-group">
+          <label class="form-label" for="usuario">Usuario (email)</label>
+          <input type="email" id="usuario" class="form-control" required>
+        </div>
 
-  <!-- Carga el script como módulo -->
+        <div class="form-group">
+          <label class="form-label" for="password">Contraseña</label>
+          <input type="password" id="password" class="form-control" required>
+        </div>
+
+        <button type="submit" class="btn" style="width: 100%; margin-top: 20px;">
+          Iniciar Sesión
+        </button>
+      </form>
+
+      <div id="msg" style="margin-top:12px;color:#b00;"></div>
+
+      <p style="margin-top: 20px; font-size: 12px; color: #666;">
+        © 2025 Bosque y Tierra - Software Interno By Luis Carvajal
+      </p>
+    </div>
+  </div>
+
+  <!-- lógica de login en módulo separado -->
   <script type="module" src="./login.js"></script>
 </body>
 </html>
