--- a/BYT_SOFTWARE/src/pages/menu_principal.html
+++ b/BYT_SOFTWARE/src/pages/menu_principal.html
@@ -45,11 +45,7 @@
     .app-shell.expanded .nav-item.active + .submenu { display: flex; }
 
     /* Sidebar footer (perfil) */
-    .sidebar-footer {
-      margin-top: auto;
-      padding-top: 8px;
-      border-top: 1px solid rgba(255,255,255,0.06);
-    }
+    .sidebar-footer { margin-top: auto; padding-top: 8px; border-top: 1px solid rgba(255,255,255,0.06); }
     .profile-pill {
       display: flex; align-items: center; gap: 12px;
       padding: 10px 12px; border-radius: 12px;
@@ -58,9 +54,7 @@
       transition: background 0.15s ease, box-shadow 0.15s ease;
     }
     .profile-pill:hover { background: var(--pill-hover); box-shadow: 0 8px 16px rgba(0,0,0,0.12); }
-    .profile-avatar {
-      width: 26px; height: 26px; border-radius: 50%; background: #3a4655; display: grid; place-items: center; font-size: 14px;
-    }
+    .profile-avatar { width: 26px; height: 26px; border-radius: 50%; background: #3a4655; display: grid; place-items: center; font-size: 14px; }
     .profile-label { display: none; }
     .app-shell.expanded .profile-label { display: inline; }
 
@@ -99,11 +93,13 @@
     <aside class="sidebar">
       <div class="brand"><img src="../assets/logo_byt.png" alt="BYT"></div>
       <div class="nav-stack">
+        <!-- Proyectos (sin submenú) -->
         <div class="nav-item active" title="Proyectos">
           <span class="nav-icon"><svg viewBox="0 0 24 24"><path d="M3.5 7A1.5 1.5 0 0 1 5 5.5h4.1a1.5 1.5 0 0 1 1.06.44l1.3 1.3H19A1.5 1.5 0 0 1 20.5 8.8l-.6 9A1.5 1.5 0 0 1 18.4 19H5.6a1.5 1.5 0 0 1-1.5-1.3l-.6-9Z"/></svg></span>
           <span class="nav-label">Proyectos</span>
         </div>
 
+        <!-- Cotizaciones -->
         <div class="nav-item" title="Cotizaciones">
           <span class="nav-icon"><svg viewBox="0 0 24 24"><path d="M6 4.5A1.5 1.5 0 0 1 7.5 3h5.9a1.5 1.5 0 0 1 1.06.44l3.1 3.1A1.5 1.5 0 0 1 18 7.6V19.5A1.5 1.5 0 0 1 16.5 21h-9A1.5 1.5 0 0 1 6 19.5v-15Z"/><path d="M14.5 3v4a.5.5 0 0 0 .5.5h4"/><path d="M9 13h6M9 16.5h4"/></svg></span>
           <span class="nav-label">Cotizaciones</span>
@@ -113,32 +109,37 @@
           <a href="https://bosqueytierra.github.io/BYT-SOFTWARE/BYT_SOFTWARE/src/pages/cotizaciones/consultar.html">Administrar cotizaciones</a>
         </div>
 
+        <!-- Compras (placeholder) -->
         <div class="nav-item" title="Compras">
           <span class="nav-icon"><svg viewBox="0 0 24 24"><path d="M6.5 7h11l-1 11h-9l-1-11Z"/><path d="M9 7V5.5a3 3 0 1 1 6 0V7"/><circle cx="10" cy="19.5" r="1"/><circle cx="15" cy="19.5" r="1"/></svg></span>
           <span class="nav-label">Compras</span>
         </div>
 
+        <!-- Ventas (placeholder) -->
         <div class="nav-item" title="Ventas">
           <span class="nav-icon"><svg viewBox="0 0 24 24"><path d="M4 7h16l-2 10H6L4 7Z"/><path d="M9 7V5a3 3 0 1 1 6 0v2"/><circle cx="10" cy="18.5" r="1"/><circle cx="15" cy="18.5" r="1"/></svg></span>
           <span class="nav-label">Ventas</span>
         </div>
 
+        <!-- Finanzas (placeholder) -->
         <div class="nav-item" title="Finanzas">
           <span class="nav-icon"><svg viewBox="0 0 24 24"><rect x="3" y="6" width="18" height="12" rx="2"/><path d="M3 10h18"/><path d="M7 14h3"/></svg></span>
           <span class="nav-label">Finanzas</span>
         </div>
 
+        <!-- Datos -->
         <div class="nav-item" title="Datos">
           <span class="nav-icon"><svg viewBox="0 0 24 24"><path d="M4 6.5A2.5 2.5 0 0 1 6.5 4h11A2.5 2.5 0 0 1 20 6.5v11A2.5 2.5 0 0 1 17.5 20h-11A2.5 2.5 0 0 1 4 17.5v-11Z"/><path d="M8 9.5h8M8 12h8M8 14.5h5"/></svg></span>
           <span class="nav-label">Datos</span>
         </div>
         <div class="submenu">
-          <a href="#">Gestión de Proveedores</a>
-          <a href="#">Gestión de Materiales</a>
+          <a href="https://bosqueytierra.github.io/BYT-SOFTWARE/BYT_SOFTWARE/src/pages/configuracion/proveedores.html">Gestión de Proveedores</a>
+          <a href="https://bosqueytierra.github.io/BYT-SOFTWARE/BYT_SOFTWARE/src/pages/configuracion/materiales.html">Gestión de Materiales</a>
           <a href="#">Gestión de Clientes</a>
           <a href="#">Gestión Usuarios y Permisos</a>
         </div>
 
+        <!-- Configuración -->
         <div class="nav-item" title="Configuración">
           <span class="nav-icon"><svg viewBox="0 0 24 24"><path d="M12 15.5a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7Z"/><path d="M19.4 15a1 1 0 0 0 .2.4l.4.6a1 1 0 0 1-.1 1.2l-.4.4a1 1 0 0 1-1.2.1l-.6-.3a1 1 0 0 0-.5-.1 7 7 0 0 1-1.1.6 1 1 0 0 0-.6.9v.6a1 1 0 0 1-1 1h-.6a1 1 0 0 1-1-.7l-.2-.6a7 7 0 0 1-.7-.4 1 1 0 0 0-1 0l-.7.4-.2.6a1 1 0 0 1-1 .7h-.6a1 1 0 0 1-1-1v-.6a1 1 0 0 0-.6-.9 7 7 0 0 1-1.1-.6 1 1 0 0 0-.5.1l-.6.3a1 1 0 0 1-1.2-.1l-.4-.4a1 1 0 0 1-.1-1.2l.4-.6a1 1 0 0 0 .2-.4 7 7 0 0 1 0-1 1 1 0 0 0-.2-.4l-.4-.6a1 1 0 0 1 .1-1.2l.4-.4a1 1 0 0 1 1.2-.1l.6.3a1 1 0 0 0 .5.1 7 7 0 0 1 1.1-.6 1 1 0 0 0 .6-.9v-.6a1 1 0 0 1 1-1h.6a1 1 0 0 1 1 .7l.2.6.7.4a1 1 0 0 0 1 0l.7-.4.2-.6a1 1 0 0 1 1-.7h.6a1 1 0 0 1 1 1v.6a1 1 0 0 0 .6.9 7 7 0 0 1 1.1.6 1 1 0 0 0 .5-.1l.6-.3a1 1 0 0 1 1.2.1l.4.4a1 1 0 0 1 .1 1.2l-.4.6a1 1 0 0 0-.2.4 7 7 0 0 1 0 1Z"/></svg></span>
           <span class="nav-label">Configuración</span>
