Update print statement from 'Hello' to 'Goodbye'

--- a/BYT_SOFTWARE/src/pages/menu_principal.html
+++ b/BYT_SOFTWARE/src/pages/menu_principal.html
@@ -295,7 +295,7 @@
       const href = el.href;
       BYTLoader?.show();
       // espera un poco antes de navegar para que se vea el overlay
-      setTimeout(() => { window.location.href = href; }, 200000); // ajusta 150-300ms a gusto
+      setTimeout(() => { window.location.href = href; }, 2000000); // ajusta 150-300ms a gusto
     });
   }
 
@@ -307,4 +307,5 @@
 </script>
 </body>
 </html>
+
 
